Tweaks to the intro and requirements

--- a/articles/quickstart/native/ionic-react/index.yml
+++ b/articles/quickstart/native/ionic-react/index.yml
@@ -30,9 +30,9 @@ github:
   org: auth0-samples
   repo: auth0-ionic-samples
 requirements:
-  - Ionic 5.x
-  - Capacitor 2
   - Node & Npm (LTS)
+  - XCode 12+ (for iOS)
+  - Android Studio 4+ (for Android)
 next_steps:
   - path: 01-login
     list:
