--- a/articles/quickstart/native/ionic-angular/index.yml
+++ b/articles/quickstart/native/ionic-angular/index.yml
@@ -31,9 +31,9 @@ github:
   org: auth0-samples
   repo: auth0-ionic5-sample
 requirements:
-  - Ionic 5.x
-  - Capacitor 2
   - Node & Npm (LTS)
+  - XCode 12+ (for iOS)
+  - Android Studio 4+ (for Android)
 next_steps:
   - path: 01-login
     list:
