Modify repo for Ionic Angular sample

--- a/articles/quickstart/native/ionic-angular/index.yml
+++ b/articles/quickstart/native/ionic-angular/index.yml
@@ -29,7 +29,7 @@ articles:
 show_steps: true
 github:
   org: auth0-samples
-  repo: auth0-ionic5-sample
+  repo: auth0-ionic-samples
 requirements:
   - Node & Npm (LTS)
   - XCode 12+ (for iOS)
@@ -37,15 +37,15 @@ requirements:
 next_steps:
   - path: 01-login
     list:
-    - text: Configure other identity providers
-      icon: 345
-      href: "/identityproviders"
-    - text: Enable multifactor authentication
-      icon: 345
-      href: "/multifactor-authentication"
-    - text: Learn about attack protection
-      icon: 345
-      href: "/attack-protection"
-    - text: Learn about rules
-      icon: 345
-      href: "/rules"
+      - text: Configure other identity providers
+        icon: 345
+        href: '/identityproviders'
+      - text: Enable multifactor authentication
+        icon: 345
+        href: '/multifactor-authentication'
+      - text: Learn about attack protection
+        icon: 345
+        href: '/attack-protection'
+      - text: Learn about rules
+        icon: 345
+        href: '/rules'
